--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.47",
     "@types/react": "^16.9.36",
+    "@types/react-bootstrap": "^1.0.1",
     "@types/react-dom": "^16.9.8",
+    "bootstrap": "^4.5.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "typescript": "^3.7.5"
